# AML-IP

./: .gitignore  README.md  amlip.repos  codecov.yml  readthedocs.yaml
.dev/: automatic_update.bash  commands.md
amlip_aml_cpp/: CMakeLists.txt  colcon.pkg  project_settings.cmake
amlip_aml_cpp/cmake/packaging/: eProsimaPackaging.cmake
amlip_aml_cpp/src/: CMakeLists.txt  main.cpp  main_generic.cpp
amlip_dds_types/src/: CMakeLists.txt  HelloWorld.cxx  HelloWorldPubSubTypes.cxx
amlip_demo/: CMakeLists.txt  README.md  computing_node.cpp  main_node.py  package.xml
amlip_demo_nodes/: CMakeLists.txt  README.md  computing_node.cpp  computing_node.py  main_node.py  status_node.py
amlip_demo_nodes/amlip_bytes_demo/: CMakeLists.txt  computing_node.py  datatypes.py  main_node.py  package.xml
amlip_demo_nodes/amlip_bytes_demo/resources/: caperucita.txt  lazarillo_de_tormes.txt  lorem_ipsum.txt  test.txt
amlip_demo_nodes/amlip_collaborative_learning_demo/: README.md  package.xml  setup.cfg  setup.py
amlip_demo_nodes/amlip_collaborative_learning_demo/amlip_collaborative_learning_demo/: model_receiver_custom.py  model_receiver_lambda.py  model_receiver_listener.py  model_sender_custom.py  model_sender_lambda.py  model_sender_listener.py
amlip_demo_nodes/amlip_tensorflow_inference_demo/: Dockerfile  README.md  compose.yaml  package.xml  setup.cfg  setup.py  tensorflow_data.py
amlip_demo_nodes/amlip_tensorflow_inference_demo/amlip_tensorflow_inference_demo/: edge_node_async.py  edge_node_sync.py  inference_node_async.py  inference_node_sync.py
amlip_demo_nodes/amlip_tensorflow_inference_rosbot2r_demo/: Dockerfile  README.md  astra_params.yaml  compose.yaml  package.xml  setup.cfg  setup.py
amlip_demo_nodes/amlip_tensorflow_inference_rosbot2r_demo/amlip_tensorflow_inference_rosbot2r_demo/: edge_node_async.py  edge_node_sync.py  inference_node_async.py  inference_node_sync.py
amlip_demo_nodes/amlip_workload_distribution_demo/: CMakeLists.txt  README.md  package.xml  status_node.py
amlip_node_py/: CMakeLists.txt  colcon.pkg  package.xml  project_settings.cmake  setup.cfg  setup.py
amlip_node_py/amlip_node_py/node/: GenericAmlipNode.py  StatusAmlipNode.py
amlip_node_py/amlip_node_py/types/: AmlipId.py  Status.py
amlip_node_py/src/swig/: CMakeLists.txt  amlip_node.i
amlip_node_py/src/swig/amlip_node/: ReaderNode.i
amlip_swig/: CMakeLists.txt  README.md  _colcon.pkg  colcon.pkg  package.xml  project_settings.cmake
amlip_swig/src/swig/: CMakeLists.txt  amlip_node.i  amlip_swig.i
amlip_swig/src/swig/amlip_node/: StatusAmlipNode.i
amlip_swig/src/swig/amlip_node/node/: StatusAmlipNode.i
amlip_swig/src/swig/amlip_node/types/: AmlipId.i  Status.i
amlip_swig/src/swig/amlip_swig/node/: AgentNode.i  AsyncComputingNode.i  AsyncEdgeNode.i  AsyncInferenceNode.i  AsyncMainNode.i  ClientNode.i  ComputingNode.i  EdgeNode.i  FiwareNode.i  GenericAmlipNode.i  InferenceNode.i  MainNode.i  ModelManagerReceiverNode.i  ModelManagerSenderNode.i  ParentNode.i  RepeaterNode.i  ServerNode.i  StatusAmlipNode.i  StatusAmlipNodeFunctor.i  StatusNode.i
amlip_swig/src/swig/amlip_swig/types/: AmlipId.i  Dump.i  GenericDataType.i  InterfaceDataType.i  Status.i  ctypes.i
amlip_swig/src/swig/amlip_swig/types/address/: Address.i
amlip_swig/src/swig/amlip_swig/types/id/: AmlipIdDataType.i  TaskId.i
amlip_swig/src/swig/amlip_swig/types/inference/: InferenceDataType.i  InferenceSolutionDataType.i
amlip_swig/src/swig/amlip_swig/types/job/: JobDataType.i  JobSolutionDataType.i  SolutionDataType.i
amlip_swig/src/swig/amlip_swig/types/model/: ModelDataType.i  ModelReplyDataType.i  ModelRequestDataType.i  ModelSolutionDataType.i  ModelStatisticsDataType.i
amlip_swig/src/swig/amlip_swig/types/multiservice/: MsReferenceDataType.i  MsRequestDataType.i
amlip_swig/src/swig/amlip_swig/types/status/: NodeKind.i  StateKind.i  StatusDataType.i
amlip_swig/src/swig/amlip_types/: AmlipId.i  InterfaceDataType.i  Status.i
amlip_swig/test/: CMakeLists.txt
amlip_swig/test/api/: CMakeLists.txt  import_test.py
amlip_swig/test/api/import/: import_test.py
amlip_swig/test/api/types/: id_datatype_test.py  status_datatype_test.py
amlip_swig_js/: CMakeLists.txt  README.md  binding.gyp  package.json  package.xml  project_settings.cmake  set (UseSWIG_TARGET_NAME_PREFERENCE STAN.cmake
amlip_swig_js/src/swig/: CMakeLists.txt  amlip_swig_js.i
amlip_swig_js/src/swig/amlip_swig_js/node/: AgentNode.i  AsyncComputingNode.i  AsyncEdgeNode.i  AsyncInferenceNode.i  AsyncMainNode.i  ComputingNode.i  EdgeNode.i  InferenceNode.i  MainNode.i  ModelManagerReceiverNode.i  ModelManagerSenderNode.i  ParentNode.i  StatusNode.i
amlip_swig_js/src/swig/amlip_swig_js/types/: GenericDataType.i
amlip_swig_js/src/swig/amlip_swig_js/types/address/: Address.i
amlip_swig_js/src/swig/amlip_swig_js/types/id/: AmlipIdDataType.i  TaskId.i
amlip_swig_js/src/swig/amlip_swig_js/types/inference/: InferenceDataType.i  InferenceSolutionDataType.i
amlip_swig_js/src/swig/amlip_swig_js/types/job/: JobDataType.i  JobSolutionDataType.i
amlip_swig_js/src/swig/amlip_swig_js/types/model/: ModelReplyDataType.i  ModelRequestDataType.i  ModelStatisticsDataType.i
amlip_swig_js/test/: CMakeLists.txt
amlip_swig_js/test/api/: CMakeLists.txt  import_test.js
amlip_swig_js/test/api/nodes/: async_computing_node_test.js  async_edge_node_test.js  async_inference_node_test.js  async_main_node_test.js  computing_node_test.js  edge_node_test.js  inference_node_test.js  main_node_test.js  modelmanagerreceiver_node_test.js  modelmanagersender_node_test.js  status_node_test.js
amlip_swig_js/test/api/types/: create_types_test.js
amlip_swig_js/test/manual/: async_computing.js  async_edge.js  async_inference.js  async_main.js  computing.js  edge.js  inference.js  main.js  model_manager_receiver.js  model_manager_sender.js  status.js
tools/agent_tool/: CMakeLists.txt  README.md  package.xml  project_settings.cmake
tools/agent_tool/src/cpp/: README.md  main.cpp
tools/agent_tool/src/cpp/user_interface/: arguments_configuration.h
(+527 files in other folders)
