<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amlip_node_py</name>
  <version>0.0.0</version>
  <description>Python package for AML-IP nodes</description>
  <maintainer email="javierparis@eprosima.com">eprosima</maintainer>
  <license>Apache License, Version 2.0</license>

  <depend>amlip_swig</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
