<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amlip_swig_js</name>
  <version>0.1.0</version>
  <description>
    eProsima AML IP JavaScript wrapper with SWIG
  </description>
  <maintainer email="RaulSanchezMateos@eprosima.com">Raul Sánchez-Mateos</maintainer>
  <maintainer email="irenebandera@eprosima.com">Irene Bandera</maintainer>
  <maintainer email="juanlopez@eprosima.com">Juan López</maintainer>
  <license file="LICENSE">Apache 2.0</license>

  <url type="website">https://www.eprosima.com/</url>
  <url type="bugtracker">https://github.com/eProsima/AML-IP/issues</url>
  <url type="repository">https://github.com/eProsima/AML-IP</url>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>cmake_utils</depend>
  <depend>cpp_utils</depend>
  <depend>amlip_cpp</depend>
  <depend>ddspipe_participants</depend>

  <test_depend>jest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
