<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amlip_collaborative_learning_demo</name>
  <version>0.2.0</version>
  <description>
    eprosima AML IP Demo
  </description>
  <maintainer email="RaulSanchezMateos@eprosima.com">Raul Sánchez-Mateos</maintainer>
  <maintainer email="juanlopez@eprosima.com">Juan López</maintainer>
  <maintainer email="irenebamdera@eprosima.com">Irene Bandera</maintainer>
  <license file="LICENSE">Apache 2.0</license>

  <url type="website">https://www.eprosima.com/</url>
  <url type="bugtracker">https://github.com/eProsima/AML-IP/issues</url>
  <url type="repository">https://github.com/eProsima/AML-IP</url>

  <depend>amlip_cpp</depend>
  <depend>amlip_swig</depend>
  <depend>amlip_py</depend>
  <depend>py_utils</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
